Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDLParser.java
// $ANTLR 3.0.1 /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3 2009-09-29 10:50:24

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "TYPE", "NUMBER", "ISNULL", "STRING", "WS", "'CREATE TABLE'", "'('", "','", "')'", "';'", "'ALTER TABLE'", "'ADD'", "'ENABLE'", "'CONSTRAINT'", "'COMMENT ON'", "'TABLE'", "'COLUMN'", "'.'", "'IS'", "'CREATE SEQUENCE'", "'INCREMENT'", "'BY'", "'START'", "'WITH'", "'MAXVALUE'", "'NOMAXVALUE'", "'MINVALUE'", "'NOMINVALUE'", "'CYCLE'", "'NOCYCLE'", "'CACHE'", "'NOCACHE'", "'ORDER'", "'NOORDER'", "'PRIMARY KEY'", "'UNIQUE'", "'FOREIGN KEY'", "'REFERENCES'"
    };
    public static final int WS=9;
    public static final int NUMBER=6;
    public static final int ISNULL=7;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int STRING=8;
    public static final int TYPE=5;

        public DDLParser(TokenStream input) {
            super(input);
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition
    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:19:1: data_definition returns [Node returnNode] : (create_tableGen+= create_table | alter_tableGen+= alter_table | create_sequenceGen+= create_sequence | commentGen+= comment )+ ;
    public final data_definition_return data_definition() throws RecognitionException {
        data_definition_return retval = new data_definition_return();
        retval.start = input.LT(1);

        List list_create_tableGen=null;
        List list_alter_tableGen=null;
        List list_create_sequenceGen=null;
        List list_commentGen=null;
        RuleReturnScope create_tableGen = null;
        RuleReturnScope alter_tableGen = null;
        RuleReturnScope create_sequenceGen = null;
        RuleReturnScope commentGen = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:20:1: ( (create_tableGen+= create_table | alter_tableGen+= alter_table | create_sequenceGen+= create_sequence | commentGen+= comment )+ )
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:2: (create_tableGen+= create_table | alter_tableGen+= alter_table | create_sequenceGen+= create_sequence | commentGen+= comment )+
            {
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:2: (create_tableGen+= create_table | alter_tableGen+= alter_table | create_sequenceGen+= create_sequence | commentGen+= comment )+
            int cnt1=0;
            loop1:
            do {
                int alt1=5;
                switch ( input.LA(1) ) {
                case 10:
                    {
                    alt1=1;
                    }
                    break;
                case 15:
                    {
                    alt1=2;
                    }
                    break;
                case 24:
                    {
                    alt1=3;
                    }
                    break;
                case 19:
                    {
                    alt1=4;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:3: create_tableGen+= create_table
            	    {
            	    pushFollow(FOLLOW_create_table_in_data_definition43);
            	    create_tableGen=create_table();
            	    _fsp--;

            	    if (list_create_tableGen==null) list_create_tableGen=new ArrayList();
            	    list_create_tableGen.add(create_tableGen);


            	    }
            	    break;
            	case 2 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:35: alter_tableGen+= alter_table
            	    {
            	    pushFollow(FOLLOW_alter_table_in_data_definition49);
            	    alter_tableGen=alter_table();
            	    _fsp--;

            	    if (list_alter_tableGen==null) list_alter_tableGen=new ArrayList();
            	    list_alter_tableGen.add(alter_tableGen);


            	    }
            	    break;
            	case 3 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:65: create_sequenceGen+= create_sequence
            	    {
            	    pushFollow(FOLLOW_create_sequence_in_data_definition55);
            	    create_sequenceGen=create_sequence();
            	    _fsp--;

            	    if (list_create_sequenceGen==null) list_create_sequenceGen=new ArrayList();
            	    list_create_sequenceGen.add(create_sequenceGen);


            	    }
            	    break;
            	case 4 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:21:103: commentGen+= comment
            	    {
            	    pushFollow(FOLLOW_comment_in_data_definition61);
            	    commentGen=comment();
            	    _fsp--;

            	    if (list_commentGen==null) list_commentGen=new ArrayList();
            	    list_commentGen.add(commentGen);


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            
            		// Create return CST Node
            		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		data_definitionReturnNode.setKind("data_definition");
            	
            		// Create a special CST Node for terminal create_tableGen aggregation
            		if(list_create_tableGen != null) {
            	    for(int pos = 0; pos < list_create_tableGen.size(); pos++ )  { 
            		// No Terminal extractor
            	    if(list_create_tableGen != null) {		
            	    	DDLParser.create_table_return r = (DDLParser.create_table_return) list_create_tableGen.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("create_table");
            	    		data_definitionReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            	
            		// Create a special CST Node for terminal alter_tableGen aggregation
            		if(list_alter_tableGen != null) {
            	    for(int pos = 0; pos < list_alter_tableGen.size(); pos++ )  { 
            		// No Terminal extractor
            	    if(list_alter_tableGen != null) {		
            	    	DDLParser.alter_table_return r = (DDLParser.alter_table_return) list_alter_tableGen.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("alter_table");
            	    		data_definitionReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            	
            		// Create a special CST Node for terminal create_sequenceGen aggregation
            		if(list_create_sequenceGen != null) {
            	    for(int pos = 0; pos < list_create_sequenceGen.size(); pos++ )  { 
            		// No Terminal extractor
            	    if(list_create_sequenceGen != null) {		
            	    	DDLParser.create_sequence_return r = (DDLParser.create_sequence_return) list_create_sequenceGen.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("create_sequence");
            	    		data_definitionReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            	
            		// Create a special CST Node for terminal commentGen aggregation
            		if(list_commentGen != null) {
            	    for(int pos = 0; pos < list_commentGen.size(); pos++ )  { 
            		// No Terminal extractor
            	    if(list_commentGen != null) {		
            	    	DDLParser.comment_return r = (DDLParser.comment_return) list_commentGen.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("comment");
            	    		data_definitionReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = data_definitionReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition

    public static class create_table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start create_table
    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:91:1: create_table returns [Node returnNode] : TK_0= 'CREATE TABLE' IDGen= ID TK_1= '(' columnGen+= column (TK_2= ',' columnGen_1+= column )* (TK_3= ',' constraintGen+= constraint )* TK_4= ')' TK_5= ';' ;
    public final create_table_return create_table() throws RecognitionException {
        create_table_return retval = new create_table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token IDGen=null;
        Token TK_1=null;
        Token TK_2=null;
        Token TK_3=null;
        Token TK_4=null;
        Token TK_5=null;
        List list_columnGen=null;
        List list_columnGen_1=null;
        List list_constraintGen=null;
        RuleReturnScope columnGen = null;
        RuleReturnScope columnGen_1 = null;
        RuleReturnScope constraintGen = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:92:1: (TK_0= 'CREATE TABLE' IDGen= ID TK_1= '(' columnGen+= column (TK_2= ',' columnGen_1+= column )* (TK_3= ',' constraintGen+= constraint )* TK_4= ')' TK_5= ';' )
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:93:2: TK_0= 'CREATE TABLE' IDGen= ID TK_1= '(' columnGen+= column (TK_2= ',' columnGen_1+= column )* (TK_3= ',' constraintGen+= constraint )* TK_4= ')' TK_5= ';'
            {
            TK_0=(Token)input.LT(1);
            match(input,10,FOLLOW_10_in_create_table84); 
            IDGen=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_create_table88); 
            TK_1=(Token)input.LT(1);
            match(input,11,FOLLOW_11_in_create_table93); 
            pushFollow(FOLLOW_column_in_create_table99);
            columnGen=column();
            _fsp--;

            if (list_columnGen==null) list_columnGen=new ArrayList();
            list_columnGen.add(columnGen);

            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:95:21: (TK_2= ',' columnGen_1+= column )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==12) ) {
                    int LA2_1 = input.LA(2);

                    if ( (LA2_1==ID) ) {
                        alt2=1;
                    }


                }


                switch (alt2) {
            	case 1 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:95:22: TK_2= ',' columnGen_1+= column
            	    {
            	    TK_2=(Token)input.LT(1);
            	    match(input,12,FOLLOW_12_in_create_table104); 
            	    pushFollow(FOLLOW_column_in_create_table108);
            	    columnGen_1=column();
            	    _fsp--;

            	    if (list_columnGen_1==null) list_columnGen_1=new ArrayList();
            	    list_columnGen_1.add(columnGen_1);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:96:3: (TK_3= ',' constraintGen+= constraint )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==12) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:96:4: TK_3= ',' constraintGen+= constraint
            	    {
            	    TK_3=(Token)input.LT(1);
            	    match(input,12,FOLLOW_12_in_create_table117); 
            	    pushFollow(FOLLOW_constraint_in_create_table121);
            	    constraintGen=constraint();
            	    _fsp--;

            	    if (list_constraintGen==null) list_constraintGen=new ArrayList();
            	    list_constraintGen.add(constraintGen);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            TK_4=(Token)input.LT(1);
            match(input,13,FOLLOW_13_in_create_table128); 
            TK_5=(Token)input.LT(1);
            match(input,14,FOLLOW_14_in_create_table132); 
            
            		// Create return CST Node
            		Node create_tableReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		create_tableReturnNode.setKind("create_table");
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_0Leaf.setKind("TOKEN");
            	 		TK_0Leaf.setValue(TK_0.getText());
            			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
            			TK_0Leaf.setLine(TK_0.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(IDGen != null) {
            			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            			IDGenLeaf.setKind("ID");
            			IDGenLeaf.setValue(IDGen.getText());
            			IDGenLeaf.setPos(IDGen.getCharPositionInLine());
            			IDGenLeaf.setLine(IDGen.getLine());
            			create_tableReturnNode.getChildren().add(IDGenLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_1 != null) {
            			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_1Leaf.setKind("TOKEN");
            	 		TK_1Leaf.setValue(TK_1.getText());
            			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
            			TK_1Leaf.setLine(TK_1.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_1Leaf);
            	 	}
            	    // Create a CST Node
            		if(list_columnGen != null) {
            	        for(Iterator it = list_columnGen.iterator(); it.hasNext(); )  { 
            	            DDLParser.column_return r = (DDLParser.column_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("column");
            	            	create_tableReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            	
            		// Create a special CST Node for terminal columnGen_1 aggregation
            		if(list_columnGen_1 != null) {
            	    for(int pos = 0; pos < list_columnGen_1.size(); pos++ )  { 
            	    // Create a Token CST Leaf	
            	    if(TK_2 != null) {
            			Leaf TK_2Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_2Leaf.setKind("TOKEN");
            	 		TK_2Leaf.setValue(TK_2.getText());
            			TK_2Leaf.setPos(TK_2.getCharPositionInLine());
            			TK_2Leaf.setLine(TK_2.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_2Leaf);
            	 	}
            		// No Terminal extractor
            	    if(list_columnGen_1 != null) {		
            	    	DDLParser.column_return r = (DDLParser.column_return) list_columnGen_1.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("column");
            	    		create_tableReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            	
            		// Create a special CST Node for terminal constraintGen aggregation
            		if(list_constraintGen != null) {
            	    for(int pos = 0; pos < list_constraintGen.size(); pos++ )  { 
            	    // Create a Token CST Leaf	
            	    if(TK_3 != null) {
            			Leaf TK_3Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_3Leaf.setKind("TOKEN");
            	 		TK_3Leaf.setValue(TK_3.getText());
            			TK_3Leaf.setPos(TK_3.getCharPositionInLine());
            			TK_3Leaf.setLine(TK_3.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_3Leaf);
            	 	}
            		// No Terminal extractor
            	    if(list_constraintGen != null) {		
            	    	DDLParser.constraint_return r = (DDLParser.constraint_return) list_constraintGen.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("constraint");
            	    		create_tableReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}
            	
            	    // Create a Token CST Leaf	
            	    if(TK_4 != null) {
            			Leaf TK_4Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_4Leaf.setKind("TOKEN");
            	 		TK_4Leaf.setValue(TK_4.getText());
            			TK_4Leaf.setPos(TK_4.getCharPositionInLine());
            			TK_4Leaf.setLine(TK_4.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_4Leaf);
            	 	}
            	    // Create a Token CST Leaf	
            	    if(TK_5 != null) {
            			Leaf TK_5Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_5Leaf.setKind("TOKEN");
            	 		TK_5Leaf.setValue(TK_5.getText());
            			TK_5Leaf.setPos(TK_5.getCharPositionInLine());
            			TK_5Leaf.setLine(TK_5.getLine());
            	 		create_tableReturnNode.getChildren().add(TK_5Leaf);
            	 	}
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = create_tableReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end create_table

    public static class column_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start column
    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:210:1: column returns [Node returnNode] : IDGen= ID TYPEGen= TYPE (TK_0= '(' NUMBERGen= NUMBER TK_1= ')' )? (ISNULLGen= ISNULL )? ;
    public final column_return column() throws RecognitionException {
        column_return retval = new column_return();
        retval.start = input.LT(1);

        Token IDGen=null;
        Token TYPEGen=null;
        Token TK_0=null;
        Token NUMBERGen=null;
        Token TK_1=null;
        Token ISNULLGen=null;

        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:211:1: (IDGen= ID TYPEGen= TYPE (TK_0= '(' NUMBERGen= NUMBER TK_1= ')' )? (ISNULLGen= ISNULL )? )
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:212:2: IDGen= ID TYPEGen= TYPE (TK_0= '(' NUMBERGen= NUMBER TK_1= ')' )? (ISNULLGen= ISNULL )?
            {
            IDGen=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_column153); 
            TYPEGen=(Token)input.LT(1);
            match(input,TYPE,FOLLOW_TYPE_in_column157); 
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:212:24: (TK_0= '(' NUMBERGen= NUMBER TK_1= ')' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==11) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:212:25: TK_0= '(' NUMBERGen= NUMBER TK_1= ')'
                    {
                    TK_0=(Token)input.LT(1);
                    match(input,11,FOLLOW_11_in_column162); 
                    NUMBERGen=(Token)input.LT(1);
                    match(input,NUMBER,FOLLOW_NUMBER_in_column166); 
                    TK_1=(Token)input.LT(1);
                    match(input,13,FOLLOW_13_in_column170); 

                    }
                    break;

            }

            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:212:71: (ISNULLGen= ISNULL )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ISNULL) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:212:71: ISNULLGen= ISNULL
                    {
                    ISNULLGen=(Token)input.LT(1);
                    match(input,ISNULL,FOLLOW_ISNULL_in_column176); 

                    }
                    break;

            }

            
            		// Create return CST Node
            		Node columnReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		columnReturnNode.setKind("column");
            	    // Create a CST Leaf
            		if(IDGen != null) {
            			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            			IDGenLeaf.setKind("ID");
            			IDGenLeaf.setValue(IDGen.getText());
            			IDGenLeaf.setPos(IDGen.getCharPositionInLine());
            			IDGenLeaf.setLine(IDGen.getLine());
            			columnReturnNode.getChildren().add(IDGenLeaf);
            		}
            	    // Create a CST Leaf
            		if(TYPEGen != null) {
            			Leaf TYPEGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            			TYPEGenLeaf.setKind("TYPE");
            			TYPEGenLeaf.setValue(TYPEGen.getText());
            			TYPEGenLeaf.setPos(TYPEGen.getCharPositionInLine());
            			TYPEGenLeaf.setLine(TYPEGen.getLine());
            			columnReturnNode.getChildren().add(TYPEGenLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_0Leaf.setKind("TOKEN");
            	 		TK_0Leaf.setValue(TK_0.getText());
            			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
            			TK_0Leaf.setLine(TK_0.getLine());
            	 		columnReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(NUMBERGen != null) {
            			Leaf NUMBERGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            			NUMBERGenLeaf.setKind("NUMBER");
            			NUMBERGenLeaf.setValue(NUMBERGen.getText());
            			NUMBERGenLeaf.setPos(NUMBERGen.getCharPositionInLine());
            			NUMBERGenLeaf.setLine(NUMBERGen.getLine());
            			columnReturnNode.getChildren().add(NUMBERGenLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_1 != null) {
            			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            	 		TK_1Leaf.setKind("TOKEN");
            	 		TK_1Leaf.setValue(TK_1.getText());
            			TK_1Leaf.setPos(TK_1.getCharPositionInLine());
            			TK_1Leaf.setLine(TK_1.getLine());
            	 		columnReturnNode.getChildren().add(TK_1Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(ISNULLGen != null) {
            			Leaf ISNULLGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
            			ISNULLGenLeaf.setKind("ISNULL");
            			ISNULLGenLeaf.setValue(ISNULLGen.getText());
            			ISNULLGenLeaf.setPos(ISNULLGen.getCharPositionInLine());
            			ISNULLGenLeaf.setLine(ISNULLGen.getLine());
            			columnReturnNode.getChildren().add(ISNULLGenLeaf);
            		}
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = columnReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end column

    public static class alter_table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start alter_table
    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:276:1: alter_table returns [Node returnNode] : TK_0= 'ALTER TABLE' tabnameGen+= tabname ( (add= 'ADD' constraintGen+= constraint ) | (enable= 'ENABLE' TK_1= 'CONSTRAINT' ) IDGen= ID ) TK_2= ';' ;
    public final alter_table_return alter_table() throws RecognitionException {
        alter_table_return retval = new alter_table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token add=null;
        Token enable=null;
        Token TK_1=null;
        Token IDGen=null;
        Token TK_2=null;
        List list_tabnameGen=null;
        List list_constraintGen=null;
        RuleReturnScope tabnameGen = null;
        RuleReturnScope constraintGen = null;
        try {
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:277:1: (TK_0= 'ALTER TABLE' tabnameGen+= tabname ( (add= 'ADD' constraintGen+= constraint ) | (enable= 'ENABLE' TK_1= 'CONSTRAINT' ) IDGen= ID ) TK_2= ';' )
            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:278:2: TK_0= 'ALTER TABLE' tabnameGen+= tabname ( (add= 'ADD' constraintGen+= constraint ) | (enable= 'ENABLE' TK_1= 'CONSTRAINT' ) IDGen= ID ) TK_2= ';'
            {
            TK_0=(Token)input.LT(1);
            match(input,15,FOLLOW_15_in_alter_table198); 
            pushFollow(FOLLOW_tabname_in_alter_table202);
            tabnameGen=tabname();
            _fsp--;

            if (list_tabnameGen==null) list_tabnameGen=new ArrayList();
            list_tabnameGen.add(tabnameGen);

            // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:279:3: ( (add= 'ADD' constraintGen+= constraint ) | (enable= 'ENABLE' TK_1= 'CONSTRAINT' ) IDGen= ID )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==16) ) {
                alt6=1;
            }
            else if ( (LA6_0==17) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("279:3: ( (add= 'ADD' constraintGen+= constraint ) | (enable= 'ENABLE' TK_1= 'CONSTRAINT' ) IDGen= ID )", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:279:4: (add= 'ADD' constraintGen+= constraint )
                    {
                    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:279:4: (add= 'ADD' constraintGen+= constraint )
                    // /home/jlcanovas/workspace/Grammar2Model.examples.PLSQL2ASTMModel/ASTMextraction/gen/DDL.ge3:279:5: add= 'ADD' constraintGen+= constraint
                    {
                    add=(Token)input.LT(1);
                    match(input,16,FOLLOW_16_in_alter_table210); 
                    pushFollow(FOLLOW_constraint_in_alter_table214);
                    constraintGen=constraint();
                    _fsp--;

                    if (list_constraintGen==null) list_constraintGen=new ArrayList();
                    list_constraintGen.add(constraintGen);


                    }

